--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Play"
+name = "Julia"
 uuid = "940c7355-9ede-4078-a8bf-c5f4ae1b8643"
 authors = ["KwatMDPhD <kwat.me@icloud.com>"]
 version = "0.1.0"
